# scopes

./: .hgignore  CMakeLists.txt  flake.nix  genie.lua
extras/vscode/scopes/: package.json
extras/vscode/scopes/syntaxes/: scopes.tmLanguage.json
include/scopes/: scopes.h
lib/scopes/: UTF-8.sc  console.sc  core.sc  enum.sc  struct.sc  testing.sc
src/: CMakeLists.txt  anchor.cpp  anchor.hpp  boot.cpp  boot.hpp  builtin.cpp  c_import.cpp  cache.cpp  cache.hpp  error.cpp  error.hpp  execution.cpp  execution.hpp  expander.cpp  gen_c.cpp  gen_c.hpp  gen_firm.cpp  gen_firm.hpp  gen_jit.cpp  gen_jit.hpp  gen_llvm.cpp  gen_llvm.hpp  gen_spirv.cpp  gen_spirv.hpp  gensyms.cpp  globals.cpp  globals.hpp  lexerparser.cpp  lexerparser.hpp  platform_abi.cpp  ppmacro.inc  prover.cpp  prover.hpp  qualifiers.hpp  quote.cpp  result.hpp  scope.cpp  scope.hpp  source_file.cpp  source_file.hpp  (+15 more)
src/qualifier/: key_qualifier.cpp  refer_qualifier.cpp  unique_qualifiers.cpp
src/type/: arguments_type.cpp  array_type.cpp  function_type.cpp  function_type.hpp  image_type.cpp  integer_type.cpp  pointer_type.cpp  qualify_type.hpp  real_type.cpp  sampledimage_type.cpp  sized_storage_type.hpp  str_type.cpp  str_type.hpp  tuple_type.cpp  typename_type.cpp  typename_type.hpp  vector_type.cpp
testing/: test_all.sc  test_regexp.sc  test_string.sc  test_table.sc  test_testing.sc  test_typedef.sc  test_utf8.sc
